--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,7 +10,16 @@ license = "Unlicense"
 categories = []
 readme = "README.md"
 
-
 [dependencies]
 common = { path = "../common" }
-ws = "0.7"
+failure = "0.1"
+futures = "0.1"
+log = "0.4"
+tungstenite = "0.6"
+url = "1.7"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+spin_sleep = "0.3"
+tokio = "0.1"
+tokio-tungstenite = "0.6"
