--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,6 +17,7 @@ log = "0.4"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+spin_sleep = "0.3"
 listenfd = "0.3"
 failure = "0.1"
 futures = "0.1"
