--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Jake McGinty <me@jake.su>"]
 edition = "2018"
 
 [dependencies]
+actix = "0.7"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
