Add API key check, send commands to the game loop, restructure player event flows

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 SECRET=triangle
 SERVER_PORT=3000
 RUST_LOG=info
+API_KEYS=403B9A2F-103F-4E43-8B52-1AC4870AA1E3,44848DB2-3778-431F-B3F9-61F293C65CC7,7DEA6163-7532-4420-9ECC-10773347DCAE
