--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,6 +14,7 @@ env_logger = "0.6"
 envy = "0.4"
 lazy_static = "1.3"
 log = "0.4"
+ratelimit_meter = "4.1.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
