move Triangle, add DEV_MODE to ignore API keys for now

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 SECRET=triangle
 SERVER_PORT=3000
 RUST_LOG=info
-API_KEYS=403B9A2F-103F-4E43-8B52-1AC4870AA1E3,44848DB2-3778-431F-B3F9-61F293C65CC7,7DEA6163-7532-4420-9ECC-10773347DCAE
+DEV_MODE=true
+API_KEYS=NIMpBlF2R9bbs,3DSWtaklJdQ4L,IlLht2XTdFT5h,WT0RBanfRrLPX,HyX7dK4ToRUiK,2IT0lKpZihzjn,3Wt3Bkmxsqrxg,MxA6o8WfACf00,QIz1jaOnwy4t1,AGDgqbueeshND,gRflUcdUv6XqN,LAjeHHbFbn1iR,otizFZQaCANHo,dXxMmKwV5ECO8,a5G987leGsLyk,RyuepOIR8Qyhk,LkRdGzOoP17oP,If9G43uvshW02
