--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -24,6 +24,7 @@ failure = "0.1"
 futures = "0.1"
 log = "0.4"
 url = "1.7"
+rand = "0.6.5"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
