Move the vec mod back to client crate. I'm sorry for back and forth; I'm still figuring out how best structure my Rust code. Also apply rustfmt.

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,16 +10,9 @@ license = "Unlicense"
 categories = []
 readme = "README.md"
 
-[[bin]]
-name = "examples-simple"
-path = "examples/simple.rs"
-
-[[bin]]
-name = "examples-chaser"
-path = "examples/chaser.rs"
-
 [dependencies]
 common = { path = "../common" }
+euclid = "0.19.6"
 failure = "0.1"
 futures = "0.1"
 log = "0.4"
