--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "meetup-server"
+name = "tokyo-server"
 version = "0.1.0"
 authors = ["Brian Schwind <brianmschwind@gmail.com>"]
 edition = "2018"
 publish = false
 
 [dependencies]
-common = { path = "../common" }
+tokyo = { path = "../client" }
 actix = "0.7"
 actix-web = {version = "0.7", features = ["ssl"]}
 dotenv = "0.13"
@@ -15,7 +15,7 @@ envy = "0.4"
 lazy_static = "1.3"
 log = "0.4"
 rand = "0.6"
-ratelimit_meter = "4.1.0"
+ratelimit_meter = "4.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
